--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ requires = ["setuptools"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "python-template"
+name = "paper-manager"
 dynamic = ["version"]
 dependencies = ["typing-extensions >= 4.0.0; python_version < '3.9'"]
 requires-python = ">= 3.7"
@@ -33,24 +33,24 @@ docs = ["sphinx", "sphinx_rtd_theme", "sphinx-markdown-tables", "recommonmark"]
 gui = ["TkEasyGUI"]
 
 [project.urls]
-Homepage = "https://github.com/yu9824/python-template"
+Homepage = "https://github.com/yu9824/paper-manager"
 # Documentation = "https://readthedocs.org"
-PyPI = "https://pypi.org/project/python-template/"
-Source = "https://github.com/yu9824/python-template"
-Tracker = "https://github.com/yu9824/python-template/issues"
-Changelog = "https://github.com/yu9824/python-template/blob/main/CHANGELOG.md"
+PyPI = "https://pypi.org/project/paper-manager/"
+Source = "https://github.com/yu9824/paper-manager"
+Tracker = "https://github.com/yu9824/paper-manager/issues"
+Changelog = "https://github.com/yu9824/paper-manager/blob/main/CHANGELOG.md"
 
 [project.scripts]
-python-template = "python_template.__main__:entrypoint"
+paper-manager = "paper_manager.__main__:entrypoint"
 
 # [project.gui-scripts]
-# python-template-gui = "python_template:main_gui"
+# paper-manager-gui = "paper_manager:main_gui"
 
 [tool.setuptools]
 package-dir = { "" = "src" }
 
 [tool.setuptools.dynamic]
-version = { attr = "python_template.__version__" }
+version = { attr = "paper_manager.__version__" }
 
 [tool.setuptools.packages.find]
 where = ["src/"]
