--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,13 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "paper-manager"
 dynamic = ["version"]
-dependencies = ["typing-extensions >= 4.0.0; python_version < '3.9'"]
+dependencies = [
+    "typing-extensions >= 4.0.0; python_version < '3.8'",
+    "urllib3 == 1.26.16",
+    "crossrefapi == 1.6.0",
+    "pandas",
+    "streamlit",
+]
 requires-python = ">= 3.7"
 authors = [{ name = "yu9824" }]
 maintainers = [{ name = "yu9824" }]
