--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "streamlit",
     "bibtexparser",
     "streamlit-pdf-viewer",
+    "pybtex",
 ]
 requires-python = ">= 3.8"
 authors = [{ name = "yu9824" }]
