--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,9 +36,8 @@ classifiers = [
 
 [project.optional-dependencies]
 test = ["pytest"]
-dev = ["twine", "wheel", "build"]
+dev = ["build"]
 docs = ["sphinx", "sphinx_rtd_theme", "sphinx-markdown-tables", "recommonmark"]
-gui = ["TkEasyGUI"]
 
 [project.urls]
 Homepage = "https://github.com/yu9824/paper-manager"
